ci: try to add testing part

--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -23,3 +23,5 @@ jobs:
         run: pnpm audit
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      - name: Testing
+        run: pnpm test
