ci: try to add build part

--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -25,3 +25,5 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Testing
         run: pnpm test
+      - name: Build
+        run: pnpm build
