--- a/.github/workflows/pr-to-develop.yaml
+++ b/.github/workflows/pr-to-develop.yaml
@@ -1,8 +1,8 @@
 name: Open PR to develop
 on:
-  push:
+  pull_request:
     branches:
-      - main
+      - develop
 jobs:
   Pull-request-validation:
     runs-on: ubuntu-latest
@@ -25,5 +25,6 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Testing
         run: pnpm test
+      # Ici il faut rajouter la partie Quality de SonarQube
       - name: Build
         run: pnpm build
